Ajuste layout: imagens 300x400, grid espaçado, valores alinhados e responsividade aprimorada

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      min-height: 255px;
-      min-width: 185px;
-      max-width: 240px;
+      min-height: 415px;
+      min-width: 220px;
+      max-width: 330px;
       width: 100%;
       justify-content: flex-start;
       box-sizing: border-box;
@@ -97,11 +97,11 @@
       background: #eef4ff;
     }
     .categoria-card img {
-      width: 115px;
-      height: 115px;
-      object-fit: contain;
+      width: 300px;
+      height: 400px;
+      object-fit: cover;
       border-radius: 10px;
-      margin-bottom: 15px;
+      margin-bottom: 16px;
       background: #e8e8e8;
       display: block;
     }
@@ -142,10 +142,10 @@
     .grid-produtos {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 38px 28px;
+      gap: 54px 34px;
       justify-items: stretch;
       align-items: stretch;
-      margin-bottom: 48px;
+      margin-bottom: 68px;
     }
     .product-card {
       background: #fff;
@@ -154,26 +154,27 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px 8px 24px 8px;
+      padding: 26px 8px 28px 8px;
       text-align: center;
       height: 100%;
-      min-height: 345px;
+      min-height: 375px;
       justify-content: flex-start;
       position: relative;
     }
     .product-card img {
-      width: 136px;
-      height: 136px;
+      width: 140px;
+      height: 140px;
       object-fit: contain;
       border-radius: 10px;
-      margin-bottom: 12px;
+      margin-bottom: 17px;
       background: #f2f2f2;
       display: block;
+      margin-top: 0;
     }
     .product-name { 
-      font-size: 1.01rem; 
+      font-size: 1.04rem; 
       font-weight: bold; 
-      margin: 4px 0 10px 0; 
+      margin: 4px 0 14px 0; 
       color: #001a71; 
       text-transform: uppercase;
       min-height: 44px;
@@ -183,36 +184,24 @@
       word-break: break-word;
     }
     .product-precos {
-      margin-bottom: 11px;
+      margin-bottom: 18px;
       display: flex;
       flex-direction: column;
       align-items: center;
       min-height: 54px;
       justify-content: flex-end;
+      width: 100%;
     }
     .preco-sugerido {
-      color: #8a8a8a;
-      text-decoration: line-through;
-      font-style: italic;
-      margin-bottom: 2px;
-      font-size: .97em;
-    }
-    .preco-label {
       color: #444;
       font-style: italic;
-      font-size: .97em;
-      margin-right: 4px;
-    }
-    .preco-b2b-label {
-      color: #001a71;
-      font-size: .98em;
-      font-weight: 600;
-      margin-bottom: 2px;
-      margin-right: 4px;
-      font-style: normal;
+      margin-bottom: 3px;
+      font-size: 1.04em;
+      font-weight: 400;
+      text-decoration: none;
     }
     .preco-b2b {
-      color: #178430;
+      color: #111;
       font-weight: bold;
       font-size: 1.13em;
       letter-spacing: .5px;
@@ -222,7 +211,7 @@
       display: inline-block;
       background: #001a71;
       color: #fff;
-      padding: 8px 18px;
+      padding: 10px 22px;
       border-radius: 6px;
       font-size: 1em;
       font-weight: 600;
@@ -235,40 +224,65 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      bottom: 22px;
-      min-width: 125px;
+      bottom: 28px;
+      min-width: 135px;
     }
     .btn-detalhes:hover {
       background: #00318b;
       color: #fff;
       box-shadow: 0 5px 18px #001a7136;
     }
-
-    /* Mais espaçamento no rodapé da vitrine */
-    .espaco-final-vitrine { min-height: 38px; }
+    .espaco-final-vitrine { min-height: 44px; }
 
     /* MOBILE */
+    @media (max-width: 1050px) {
+      .grid-categorias, .grid-produtos { grid-template-columns: repeat(2, 1fr);}
+      .categoria-card, .product-card { min-width: unset; max-width: unset;}
+      .categoria-card img { width: 95vw; max-width: 98vw; height: 54vw; max-height: 400px;}
+      .product-card img { width: 90vw; max-width: 97vw; height: 40vw; max-height: 160px;}
+    }
     @media (max-width: 900px) {
       .header-container { height: auto; flex-direction: column; align-items: flex-start; padding: 18px 8px;}
       .header-logo { height: 48px; margin-right: 0; margin-bottom: 7px;}
       .header-textos { font-size: 1em; }
       .grid-categorias { grid-template-columns: repeat(2, 1fr);}
-      .categoria-card img, .product-card img { width: 80px; height: 80px;}
-      .categoria-card, .product-card { min-height: 205px; }
+      .categoria-card img { width: 98vw; max-width: 99vw; height: 60vw; max-height: 410px;}
+      .categoria-card, .product-card { min-height: 215px; }
       .categoria-nome { font-size: 0.95rem; }
-      .grid-produtos { grid-template-columns: repeat(2, 1fr); gap: 22px 10px;}
-      .product-card { min-height: 285px; }
-      .product-card img { width: 110px; height: 110px; }
+      .grid-produtos { grid-template-columns: repeat(2, 1fr); gap: 32px 9px;}
+      .product-card { min-height: 260px; }
+      .product-card img { width: 95vw; max-width: 99vw; height: 42vw; max-height: 190px; }
     }
     @media (max-width: 600px) {
       .header-container { padding: 12px 2px; }
       .header-logo { height: 34px; }
       .header-textos b { font-size: 1em; }
-      .categoria-card img, .product-card img { width: 60px; height: 60px;}
+      .categoria-card img { width: 99vw; max-width: 100vw; height: 66vw; max-height: 410px;}
       .categoria-nome { font-size: 0.89rem;}
       .product-name { font-size: 0.89rem;}
-      .grid-produtos { gap: 8px 5px;}
+      .grid-produtos { gap: 10px 5px;}
       .categoria-card, .product-card { min-height: 145px;}
+      .product-card img { width: 98vw; max-width: 100vw; height: 54vw; max-height: 250px;}
+    }
+
+    /* Hide price labels on mobile */
+    @media (max-width: 700px) {
+      .preco-sugerido::before,
+      .preco-b2b::before {
+        content: '';
+      }
+      .preco-sugerido-label,
+      .preco-b2b-label {
+        display: none !important;
+      }
+    }
+    @media (max-width: 700px) {
+      .product-precos .preco-sugerido,
+      .product-precos .preco-b2b {
+        font-size: 1.12em;
+        margin-bottom: 0px;
+        margin-top: 2px;
+      }
     }
 
     /* Botão flutuante */
@@ -401,7 +415,7 @@
   <footer>
     <div class="footer-institucional">
       Rua Barra Funda, 560 - CEP: 01152-000 - São Paulo - SP - 
-      <a href="https://maps.app.goo.gl/TXbfcKX1H5aPLspf7" target="_blank">VER MAPA</a> - Próximo à estação Marechal Deodoro da linha Vermelha do Metrô
+      <a href="https://maps.app.goo.gl/tBM8iJvAWdVe8FkC9" target="_blank">VER MAPA</a> - Próximo à estação Marechal Deodoro da linha Vermelha do Metrô
       <br>
       +55 11 3660-2266 / WhatsApp: +55 11 99687-3840
       <br>
@@ -449,8 +463,14 @@
             <img src="${prod.image}" alt="${prod.name}">
             <div class="product-name">${prod.name}</div>
             <div class="product-precos">
-              <span class="preco-sugerido"><span class="preco-label">Preço sugerido</span> R$ 1.299,90</span>
-              <span class="preco-b2b"><span class="preco-b2b-label">Preço B2B</span> R$ 999,90</span>
+              <span class="preco-sugerido">
+                <span class="preco-sugerido-label">Preço sugerido</span>
+                R$ 1.299,90
+              </span>
+              <span class="preco-b2b">
+                <span class="preco-b2b-label">Preço B2B</span>
+                R$ 999,90
+              </span>
             </div>
             <a class="btn-detalhes" href="${prod.link}" target="_blank">Mais Detalhes</a>
           </div>
